Debugging the accordion area.

--- a/resources.html
+++ b/resources.html
@@ -146,7 +146,7 @@
 									<h2 class="mt-4">Resources</h2>
 									<p class="mt-4">.</p>
 									<h3 class="mt-4">Federal</h3>
-									<div class="ui styled fluid accordion mt-4" data-options='{"exclusive":false}'>
+									<div class="ui styled fluid accordion mt-4" id="resources-gc" data-options='{"exclusive":false}'>
 										<div class="active title">
 											<i class="dropdown icon"></i>
 											<h5 class="d-inline-block fs-0">What is a dog?</h5>
@@ -172,7 +172,7 @@
 										</div>
 									</div>
 									<h3 class="mt-4">Alberta</h3>
-									<div class="ui styled fluid accordion mt-4" data-options='{"exclusive":false}'>
+									<div class="ui styled fluid accordion mt-4" id="resources-ab" data-options='{"exclusive":false}'>
 										<div class="active title">
 											<i class="dropdown icon"></i>
 											<h5 class="d-inline-block fs-0">Province-wide</h5>
@@ -209,16 +209,205 @@
 										</div>
 									</div>
 									<h3 class="mt-4">British Columbia</h3>
+									<div class="ui styled fluid accordion mt-4" id="resources-bc" data-options='{"exclusive":false}'>
+										<div class="active title">
+											<i class="dropdown icon"></i>
+											<h5 class="d-inline-block fs-0">Province-wide</h5>
+										</div>
+										<div class="active content">
+											<p>A dog is a type of domesticated animal. Known for its loyalty and faithfulness, it can be found as a welcome guest in many households across the world.</p>
+										</div>
+										<div class="title">
+											<i class="dropdown icon"></i>
+											<h5 class="d-inline-block fs-0">Vancouver</h5>
+										</div>
+										<div class="content">
+										</div>
+									</div>
 									<h3 class="mt-4">Manitoba</h3>
+									<div class="ui styled fluid accordion mt-4" id="resources-mb" data-options='{"exclusive":false}'>
+										<div class="active title">
+											<i class="dropdown icon"></i>
+											<h5 class="d-inline-block fs-0">Province-wide</h5>
+										</div>
+										<div class="active content">
+											<p>A dog is a type of domesticated animal. Known for its loyalty and faithfulness, it can be found as a welcome guest in many households across the world.</p>
+										</div>
+										<div class="title">
+											<i class="dropdown icon"></i>
+											<h5 class="d-inline-block fs-0">Winnipeg</h5>
+										</div>
+										<div class="content">
+										</div>
+									</div>
 									<h3 class="mt-4">Newfoundland and Labrador</h3>
+									<div class="ui styled fluid accordion mt-4" id="resources-nl" data-options='{"exclusive":false}'>
+										<div class="active title">
+											<i class="dropdown icon"></i>
+											<h5 class="d-inline-block fs-0">Province-wide</h5>
+										</div>
+										<div class="active content">
+											<p>A dog is a type of domesticated animal. Known for its loyalty and faithfulness, it can be found as a welcome guest in many households across the world.</p>
+										</div>
+										<div class="title">
+											<i class="dropdown icon"></i>
+											<h5 class="d-inline-block fs-0">St. John</h5>
+										</div>
+										<div class="content">
+										</div>
+									</div>
 									<h3 class="mt-4">Northwest Territories</h3>
+									<div class="ui styled fluid accordion mt-4" id="resources-nt" data-options='{"exclusive":false}'>
+										<div class="active title">
+											<i class="dropdown icon"></i>
+											<h5 class="d-inline-block fs-0">Territory-wide</h5>
+										</div>
+										<div class="active content">
+											<p>A dog is a type of domesticated animal. Known for its loyalty and faithfulness, it can be found as a welcome guest in many households across the world.</p>
+										</div>
+										<div class="title">
+											<i class="dropdown icon"></i>
+											<h5 class="d-inline-block fs-0">Yellowknife</h5>
+										</div>
+										<div class="content">
+										</div>
+									</div>
 									<h3 class="mt-4">Nova Scotia</h3>
+									<div class="ui styled fluid accordion mt-4" id="resources-ns" data-options='{"exclusive":false}'>
+										<div class="active title">
+											<i class="dropdown icon"></i>
+											<h5 class="d-inline-block fs-0">Province-wide</h5>
+										</div>
+										<div class="active content">
+											<p>A dog is a type of domesticated animal. Known for its loyalty and faithfulness, it can be found as a welcome guest in many households across the world.</p>
+										</div>
+										<div class="title">
+											<i class="dropdown icon"></i>
+											<h5 class="d-inline-block fs-0">Halifax</h5>
+										</div>
+										<div class="content">
+										</div>
+									</div>
 									<h3 class="mt-4">Nunavut</h3>
+									<div class="ui styled fluid accordion mt-4" id="resources-nu" data-options='{"exclusive":false}'>
+										<div class="active title">
+											<i class="dropdown icon"></i>
+											<h5 class="d-inline-block fs-0">Territory-wide</h5>
+										</div>
+										<div class="active content">
+											<p>A dog is a type of domesticated animal. Known for its loyalty and faithfulness, it can be found as a welcome guest in many households across the world.</p>
+										</div>
+										<div class="title">
+											<i class="dropdown icon"></i>
+											<h5 class="d-inline-block fs-0">Iqaluit</h5>
+										</div>
+										<div class="content">
+										</div>
+									</div>
 									<h3 class="mt-4">Ontario</h3>
+									<div class="ui styled fluid accordion mt-4" id="resources-on" data-options='{"exclusive":false}'>
+										<div class="active title">
+											<i class="dropdown icon"></i>
+											<h5 class="d-inline-block fs-0">Province-wide</h5>
+										</div>
+										<div class="active content">
+											<p>A dog is a type of domesticated animal. Known for its loyalty and faithfulness, it can be found as a welcome guest in many households across the world.</p>
+										</div>
+										<div class="title">
+											<i class="dropdown icon"></i>
+											<h5 class="d-inline-block fs-0">Hamilton</h5>
+										</div>
+										<div class="content">
+										</div>
+										<div class="title">
+											<i class="dropdown icon"></i>
+											<h5 class="d-inline-block fs-0">Thunder Bay</h5>
+										</div>
+										<div class="content">
+										</div>
+										<div class="title">
+											<i class="dropdown icon"></i>
+											<h5 class="d-inline-block fs-0">Toronto</h5>
+										</div>
+										<div class="content">
+										</div>
+										<div class="title">
+											<i class="dropdown icon"></i>
+											<h5 class="d-inline-block fs-0">Windsor</h5>
+										</div>
+										<div class="content">
+										</div>
+									</div>
 									<h3 class="mt-4">Prince Edward Island</h3>
+									<div class="ui styled fluid accordion mt-4" id="resources-pe" data-options='{"exclusive":false}'>
+										<div class="active title">
+											<i class="dropdown icon"></i>
+											<h5 class="d-inline-block fs-0">Province-wide</h5>
+										</div>
+										<div class="active content">
+											<p>A dog is a type of domesticated animal. Known for its loyalty and faithfulness, it can be found as a welcome guest in many households across the world.</p>
+										</div>
+									</div>
 									<h3 class="mt-4">Québec</h3>
+									<div class="ui styled fluid accordion mt-4" id="resources-pq" data-options='{"exclusive":false}'>
+										<div class="active title">
+											<i class="dropdown icon"></i>
+											<h5 class="d-inline-block fs-0">Province-wide</h5>
+										</div>
+										<div class="active content">
+											<p>A dog is a type of domesticated animal. Known for its loyalty and faithfulness, it can be found as a welcome guest in many households across the world.</p>
+										</div>
+										<div class="title">
+											<i class="dropdown icon"></i>
+											<h5 class="d-inline-block fs-0">Montréal</h5>
+										</div>
+										<div class="content">
+										</div>
+										<div class="title">
+											<i class="dropdown icon"></i>
+											<h5 class="d-inline-block fs-0">Québec City</h5>
+										</div>
+										<div class="content">
+										</div>
+									</div>
 									<h3 class="mt-4">Saskatchewan</h3>
+									<div class="ui styled fluid accordion mt-4" id="resources-sk" data-options='{"exclusive":false}'>
+										<div class="active title">
+											<i class="dropdown icon"></i>
+											<h5 class="d-inline-block fs-0">Province-wide</h5>
+										</div>
+										<div class="active content">
+											<p>A dog is a type of domesticated animal. Known for its loyalty and faithfulness, it can be found as a welcome guest in many households across the world.</p>
+										</div>
+										<div class="title">
+											<i class="dropdown icon"></i>
+											<h5 class="d-inline-block fs-0">Regina</h5>
+										</div>
+										<div class="content">
+										</div>
+										<div class="title">
+											<i class="dropdown icon"></i>
+											<h5 class="d-inline-block fs-0">Saskatoon</h5>
+										</div>
+										<div class="content">
+										</div>
+									</div>
 									<h3 class="mt-4">Yukon Territories</h3>
+									<div class="ui styled fluid accordion mt-4" id="resources-yk" data-options='{"exclusive":false}'>
+										<div class="active title">
+											<i class="dropdown icon"></i>
+											<h5 class="d-inline-block fs-0">Territory-wide</h5>
+										</div>
+										<div class="active content">
+											<p>A dog is a type of domesticated animal. Known for its loyalty and faithfulness, it can be found as a welcome guest in many households across the world.</p>
+										</div>
+										<div class="title">
+											<i class="dropdown icon"></i>
+											<h5 class="d-inline-block fs-0">Whitehorse</h5>
+										</div>
+										<div class="content">
+										</div>
+									</div>
 									
 									<h2 class="mt-4">References</h2>
 									<p class="mt-4">Alexander, R. (2013, November). <a href="https://www.researchgate.net/publication/294425859_Transgendered_Prisoners_in_the_United_States_A_Progression_of_Laws">Transgendered Prisoners in the United States: A Progression of Laws</a>. <em>Laws</em>, 2(4), 428-439. doi:10.3390/laws2040428</p>
@@ -261,6 +450,19 @@
 		        throttle: 0, c: 'w', ads: 0
 		    });
 		    _client.start();
+		    $('#resources-gc').accordion();
+		    $('#resources-ab').accordion();
+		    $('#resources-bc').accordion();
+		    $('#resources-mb').accordion();
+		    $('#resources-nl').accordion();
+		    $('#resources-ns').accordion();
+		    $('#resources-nt').accordion();
+		    $('#resources-nu').accordion();
+		    $('#resources-on').accordion();
+		    $('#resources-pe').accordion();
+		    $('#resources-pq').accordion();
+		    $('#resources-sk').accordion();
+		    $('#resources-yk').accordion();
 		</script>
 	</body>
 </html>
