--- a/resources.html
+++ b/resources.html
@@ -185,6 +185,24 @@
 											<h5 class="d-inline-block fs-0">Calgary</h5>
 										</div>
 										<div class="content">
+											<div class="fancy-tab">
+												<div class="nav-bar nav-bar-center">
+													<div class="nav-bar-item active"><span class="icon-Home-4 fs-2"></span><br>Home</div>
+													<div class="nav-bar-item"><span class="icon-Talk-Man fs-2"></span><br>Profile</div>
+													<div class="nav-bar-item"><span class="icon-Security-Settings fs-2"></span><br>Settings</div>
+												</div>
+												<div class="tab-contents">
+													<div class="tab-content active">
+														<p class="lead text-1100">Duis ac facilisis mauris. Pellentesque leo tortor, maximus sed gravida dapibus, suscipit non nisi. Duis ultrices diam a maximus imperdiet. Nam eu purus a erat tristique ornare. Donec condimentum tristique diam eu congue. </p>
+													</div>
+													<div class="tab-content">
+														<p class="lead text-1100">Nullam sed tempus mauris, vitae pretium nibh. Nam pretium diam id massa mollis pretium. Aenean lacus massa, tristique id mauris ac, sollicitudin auctor neque. Cras laoreet nunc nibh, ac tristique orci rutrum quis. Nam luctus, sapien ligula finibus turpis.</p>
+													</div>
+													<div class="tab-content">
+														<p class="lead text-1100">Vestibulum convallis diam id nibh tempus, ac scelerisque nulla congue. Cras laoreet nunc nibh, ac tristique orci rutrum quis. Sed eu tellus pharetra, scelerisque nulla in, vehicula libero. Curabitur interdum nec metus ante sed luctus.</p>
+													</div>
+												</div>
+											</div>
 											<ul>
 												<li><a href="https://1000voices.ca"><strong>1,000 Voices</strong></a> — 7556 Falconridge Blvd NE - (403) 930-3370</li>
 												<li><a href="https://actiondignity.org"><strong>ActionDignity</strong></a> — 915 33 Street NE - (403) 263-9900</li>
@@ -452,19 +470,6 @@
 		        throttle: 0, c: 'w', ads: 0
 		    });
 		    _client.start();
-		    $('#resources-gc').accordion();
-		    $('#resources-ab').accordion();
-		    $('#resources-bc').accordion();
-		    $('#resources-mb').accordion();
-		    $('#resources-nl').accordion();
-		    $('#resources-ns').accordion();
-		    $('#resources-nt').accordion();
-		    $('#resources-nu').accordion();
-		    $('#resources-on').accordion();
-		    $('#resources-pe').accordion();
-		    $('#resources-pq').accordion();
-		    $('#resources-sk').accordion();
-		    $('#resources-yk').accordion();
 		</script>
 	</body>
 </html>
