Categorization of Calgary-area resources

--- a/resources.html
+++ b/resources.html
@@ -187,33 +187,35 @@
 										<div class="content">
 											<div class="fancy-tab">
 												<div class="nav-bar nav-bar-center">
-													<div class="nav-bar-item active"><span class="icon-Home-4 fs-2"></span><br>Home</div>
-													<div class="nav-bar-item"><span class="icon-Talk-Man fs-2"></span><br>Profile</div>
-													<div class="nav-bar-item"><span class="icon-Security-Settings fs-2"></span><br>Settings</div>
+													<div class="nav-bar-item active"><br />General</div>
+													<div class="nav-bar-item"><br />Immigrant-Serving Organizations</div>
+													<div class="nav-bar-item"><br />Legal Aid</div>
 												</div>
 												<div class="tab-contents">
 													<div class="tab-content active">
-														<p class="lead text-1100">Duis ac facilisis mauris. Pellentesque leo tortor, maximus sed gravida dapibus, suscipit non nisi. Duis ultrices diam a maximus imperdiet. Nam eu purus a erat tristique ornare. Donec condimentum tristique diam eu congue. </p>
+														<p class="lead text-1100">Calgary is Western Canada's second biggest city. </p>
+														<ul>
+															<li><a href="https://www.calgary.ca/content/dam/www/csps/cns/documents/immigrants-newcomers-refugees/newcomers-guide-english.pdf"><strong>The Newcomers Guide to Calgary</strong></a> — Published by the City of Calgary</li>
+														</ul>
 													</div>
 													<div class="tab-content">
-														<p class="lead text-1100">Nullam sed tempus mauris, vitae pretium nibh. Nam pretium diam id massa mollis pretium. Aenean lacus massa, tristique id mauris ac, sollicitudin auctor neque. Cras laoreet nunc nibh, ac tristique orci rutrum quis. Nam luctus, sapien ligula finibus turpis.</p>
+														<ul>
+															<li><a href="https://1000voices.ca"><strong>1,000 Voices</strong></a> — 7556 Falconridge Blvd NE - (403) 930-3370</li>
+															<li><a href="https://actiondignity.org"><strong>ActionDignity</strong></a> — 915 33 Street NE - (403) 263-9900</li>
+															<li><a href="https://ccisab.ca"><strong>Calgary Catholic Immigration Society</strong></a> — 1111 11 Ave SW - (403) 262-2006</li>
+															<li><a href="https://ciwa-online.com"><strong>Calgary Immigrant Women’s Association</strong></a> - 138 4 Ave SE, Suite 200 - (403) 263-4414</li>
+															<li><a href="https://canaf-calgary.ca"><strong>Centre d’Accueil Pour Les Nouveaux Arrivants Francophones</strong></a> - 840 7 Ave SW, Suite 1601 - (403) 532-6334</li>
+															<li><strong>Centre for Newcomers</strong> - </li>
+														</ul>
 													</div>
 													<div class="tab-content">
-														<p class="lead text-1100">Vestibulum convallis diam id nibh tempus, ac scelerisque nulla congue. Cras laoreet nunc nibh, ac tristique orci rutrum quis. Sed eu tellus pharetra, scelerisque nulla in, vehicula libero. Curabitur interdum nec metus ante sed luctus.</p>
+														<ul>
+															<li><a href="https://clg.ab.ca"><strong>Calgary Legal Guidance</strong></a> — 840 - 7th Avenue SW, Suite 100 - (403) 234-9266</li>
+															<li><a href="https://slacalgary.com"><strong>University of Calgary Student Legal Assistance</strong></a> — 3390 Murray Fraser Hall - <a href="tel:+1-403-220-6637">(403) 220-6637</li>
+														</ul>
 													</div>
 												</div>
 											</div>
-											<ul>
-												<li><a href="https://1000voices.ca"><strong>1,000 Voices</strong></a> — 7556 Falconridge Blvd NE - (403) 930-3370</li>
-												<li><a href="https://actiondignity.org"><strong>ActionDignity</strong></a> — 915 33 Street NE - (403) 263-9900</li>
-												<li><a href="https://ccisab.ca"><strong>Calgary Catholic Immigration Society</strong></a> — 1111 11 Ave SW - (403) 262-2006</li>
-												<li><a href="https://ciwa-online.com"><strong>Calgary Immigrant Women’s Association</strong></a> - 138 4 Ave SE, Suite 200 - (403) 263-4414</li>
-												<li><a href="https://clg.ab.ca"><strong>Calgary Legal Guidance</strong></a> — 840 - 7th Avenue SW, Suite 100 - (403) 234-9266</li>
-												<li><a href="https://canaf-calgary.ca"><strong>Centre d’Accueil Pour Les Nouveaux Arrivants Francophones</strong></a> - 840 7 Ave SW, Suite 1601 - (403) 532-6334</li>
-												<li>Centre for Newcomers - </li>
-												<li><a href="https://www.calgary.ca/content/dam/www/csps/cns/documents/immigrants-newcomers-refugees/newcomers-guide-english.pdf"><strong>The Newcomers Guide to Calgary</strong></a> — Published by the City of Calgary</li>
-												<li><a href="https://slacalgary.com"><strong>University of Calgary Student Legal Assistance</strong></a> — 3390 Murray Fraser Hall - <a href="tel:+1-403-220-6637">(403) 220-6637</li>
-											</ul>
 										</div>
 										<div class="title">
 											<i class="dropdown icon"></i>
