--- a/resources.html
+++ b/resources.html
@@ -199,20 +199,80 @@
 														</ul>
 													</div>
 													<div class="tab-content">
-														<ul>
-															<li><a href="https://1000voices.ca"><strong>1,000 Voices</strong></a> — 7556 Falconridge Blvd NE - (403) 930-3370</li>
-															<li><a href="https://actiondignity.org"><strong>ActionDignity</strong></a> — 915 33 Street NE - (403) 263-9900</li>
-															<li><a href="https://ccisab.ca"><strong>Calgary Catholic Immigration Society</strong></a> — 1111 11 Ave SW - (403) 262-2006</li>
-															<li><a href="https://ciwa-online.com"><strong>Calgary Immigrant Women’s Association</strong></a> - 138 4 Ave SE, Suite 200 - (403) 263-4414</li>
-															<li><a href="https://canaf-calgary.ca"><strong>Centre d’Accueil Pour Les Nouveaux Arrivants Francophones</strong></a> - 840 7 Ave SW, Suite 1601 - (403) 532-6334</li>
-															<li><strong>Centre for Newcomers</strong> - </li>
-														</ul>
+														<div class="col-md-4 mt-4 mt-md-0">
+															<div class="card">
+																<div class="card-body">
+																	<a class="text-1000" href="https://1000voices.ca"><h5 class="card-title">1,000 Voices</h5></a>
+																	<hr class="text-300" />
+																	<p class="card-text text-1000 text-sans-serif">7556 Falconridge Blvd NE<br /><a href="tel:+1-403-930-3370">(403) 930-3370</a></p>
+																</div>
+															</div>
+														</div>
+														<div class="col-md-4 mt-4 mt-md-0">
+															<div class="card">
+																<div class="card-body">
+																	<a class="text-1000" href="https://actiondignity.org"><h5 class="card-title">ActionDignity</h5></a>
+																	<hr class="text-300" />
+																	<p class="card-text text-1000 text-sans-serif">915 33 Street NE<br /><a href="tel:+1-403-263-9900">(403) 263-9900</a></p>
+																</div>
+															</div>
+														</div>
+														<div class="col-md-4 mt-4 mt-md-0">
+															<div class="card">
+																<div class="card-body">
+																	<a class="text-1000" href="https://ccisab.ca"><h5 class="card-title">Calgary Catholic Immigration Society</h5></a>
+																	<hr class="text-300" />
+																	<p class="card-text text-1000 text-sans-serif">1111 11 Ave SW<br /><a href="tel:+1-403-262-2006">(403) 262-2006</a></p>
+																</div>
+															</div>
+														</div>
+														<div class="col-md-4 mt-4 mt-md-0">
+															<div class="card">
+																<div class="card-body">
+																	<a class="text-1000" href="https://ciwa-online.com"><h5 class="card-title">Calgary Immigrant Women's Association</h5></a>
+																	<hr class="text-300" />
+																	<p class="card-text text-1000 text-sans-serif">138 4 Ave SE<br />Suite 200<br /><a href="tel:+1-403-263-4414">(403) 263-4414</a></p>
+																</div>
+															</div>
+														</div>
+														<div class="col-md-4 mt-4 mt-md-0">
+															<div class="card">
+																<div class="card-body">
+																	<a class="text-1000" href="https://canaf-calgary.ca" lang="fr-ca"><h5 class="card-title">Centre d’accueil pour les nouveaux arrivants francophones</h5></a>
+																	<hr class="text-300" />
+																	<p class="card-text text-1000 text-sans-serif">840 7 Ave SW<br />Suite 1601<br /><a href="tel:+1-403-532-6334">(403) 532-6334</a></p>
+																</div>
+															</div>
+														</div>
+														<div class="col-md-4 mt-4 mt-md-0">
+															<div class="card">
+																<div class="card-body">
+																	<a class="text-1000" href="https://www.centrefornewcomers.ca/"><h5 class="card-title">Centre for Newcomers</h5></a>
+																	<hr class="text-300" />
+																	<p class="card-text text-1000 text-sans-serif"></p>
+																</div>
+															</div>
+														</div>
 													</div>
 													<div class="tab-content">
-														<ul>
-															<li><a href="https://clg.ab.ca"><strong>Calgary Legal Guidance</strong></a> — 840 - 7th Avenue SW, Suite 100 - (403) 234-9266</li>
-															<li><a href="https://slacalgary.com"><strong>University of Calgary Student Legal Assistance</strong></a> — 3390 Murray Fraser Hall - <a href="tel:+1-403-220-6637">(403) 220-6637</li>
-														</ul>
+														<div class="col-md-4 mt-4 mt-md-0">
+															<div class="card">
+																<div class="card-body">
+																	<a class="text-1000" href="https://clg.ab.ca"><h5 class="card-title">Calgary Legal Guidance</h5></a>
+																	<hr class="text-300" />
+																	<p class="card-text text-1000 text-sans-serif">840 - 7th Avenue SW<br />Suite 100<br /><a href="tel:+1-403-234-9266">(403) 234-9266</a></p>
+																</div>
+															</div>
+														</div>
+														<div class="col-md-4 mt-4 mt-md-0">
+															<div class="card">
+																<div class="card-body">
+																	<a class="text-1000" href="https://slacalgary.com"><h5 class="card-title">University of Calgary Student Legal Assistance</h5></a>
+																	<hr class="text-300" />
+																	<p class="card-text text-1000 text-sans-serif">3390 Murray Fraser Hall<br /><a href="tel:+1-403-220-6637">(403) 220-6637</a></p>
+																</div>
+															</div>
+														</div>
 													</div>
 												</div>
 											</div>
@@ -222,10 +282,24 @@
 											<h5 class="d-inline-block fs-0">Edmonton</h5>
 										</div>
 										<div class="content">
-											<ul>
-												<li><a href="https://eclc.ca"><strong>Edmonton Community Legal Centre</strong></a> — 10020 100 Street, Second floor - (780) 702-1725</li>
-												<li><a href="https://eisa-edmonton.org"><strong>Edmonton Immigrant Services Association</strong></a> — 10720 113 Street, Suite 201 - (780) 474-8445</li>
-											</ul>
+											<div class="col-md-4 mt-4 mt-md-0">
+												<div class="card">
+													<div class="card-body">
+														<a class="text-1000" href="https://eclc.ca"><h5 class="card-title">Edmonton Community Legal Centre</h5></a>
+														<hr class="text-300" />
+														<p class="card-text text-1000 text-sans-serif">10020 100 Street<br />Second floor<br /><a href="tel:+1-780-702-1725">(780) 702-1725</a></p>
+													</div>
+												</div>
+											</div>
+											<div class="col-md-4 mt-4 mt-md-0">
+												<div class="card">
+													<div class="card-body">
+														<a class="text-1000" href="https://eisa-edmonton.org"><h5 class="card-title">Edmonton Immigrant Services Association</h5></a>
+														<hr class="text-300" />
+														<p class="card-text text-1000 text-sans-serif">10720 113 Street<br />Suite 201<br /><a href="tel:+1-780-474-8445">(780) 474-8445</a></p>
+													</div>
+												</div>
+											</div>
 										</div>
 									</div>
 									<h3 class="mt-4">British Columbia</h3>
