Adding a row <div> tag.

--- a/resources.html
+++ b/resources.html
@@ -199,77 +199,81 @@
 														</ul>
 													</div>
 													<div class="tab-content">
-														<div class="col-md-4 mt-4 mt-md-0">
-															<div class="card">
-																<div class="card-body">
-																	<a class="text-1000" href="https://1000voices.ca"><h5 class="card-title">1,000 Voices</h5></a>
-																	<hr class="text-300" />
-																	<p class="card-text text-1000 text-sans-serif">7556 Falconridge Blvd NE<br /><a href="tel:+1-403-930-3370">(403) 930-3370</a></p>
+														<div class="row">
+															<div class="col-md-4 mt-4 mt-md-0">
+																<div class="card">
+																	<div class="card-body">
+																		<a class="text-1000" href="https://1000voices.ca"><h5 class="card-title">1,000 Voices</h5></a>
+																		<hr class="text-300" />
+																		<p class="card-text text-1000 text-sans-serif">7556 Falconridge Blvd NE<br /><a href="tel:+1-403-930-3370">(403) 930-3370</a></p>
+																	</div>
 																</div>
 															</div>
-														</div>
-														<div class="col-md-4 mt-4 mt-md-0">
-															<div class="card">
-																<div class="card-body">
-																	<a class="text-1000" href="https://actiondignity.org"><h5 class="card-title">ActionDignity</h5></a>
-																	<hr class="text-300" />
-																	<p class="card-text text-1000 text-sans-serif">915 33 Street NE<br /><a href="tel:+1-403-263-9900">(403) 263-9900</a></p>
+															<div class="col-md-4 mt-4 mt-md-0">
+																<div class="card">
+																	<div class="card-body">
+																		<a class="text-1000" href="https://actiondignity.org"><h5 class="card-title">ActionDignity</h5></a>
+																		<hr class="text-300" />
+																		<p class="card-text text-1000 text-sans-serif">915 33 Street NE<br /><a href="tel:+1-403-263-9900">(403) 263-9900</a></p>
+																	</div>
 																</div>
 															</div>
-														</div>
-														<div class="col-md-4 mt-4 mt-md-0">
-															<div class="card">
-																<div class="card-body">
-																	<a class="text-1000" href="https://ccisab.ca"><h5 class="card-title">Calgary Catholic Immigration Society</h5></a>
-																	<hr class="text-300" />
-																	<p class="card-text text-1000 text-sans-serif">1111 11 Ave SW<br /><a href="tel:+1-403-262-2006">(403) 262-2006</a></p>
+															<div class="col-md-4 mt-4 mt-md-0">
+																<div class="card">
+																	<div class="card-body">
+																		<a class="text-1000" href="https://ccisab.ca"><h5 class="card-title">Calgary Catholic Immigration Society</h5></a>
+																		<hr class="text-300" />
+																		<p class="card-text text-1000 text-sans-serif">1111 11 Ave SW<br /><a href="tel:+1-403-262-2006">(403) 262-2006</a></p>
+																	</div>
 																</div>
 															</div>
-														</div>
-														<div class="col-md-4 mt-4 mt-md-0">
-															<div class="card">
-																<div class="card-body">
-																	<a class="text-1000" href="https://ciwa-online.com"><h5 class="card-title">Calgary Immigrant Women's Association</h5></a>
-																	<hr class="text-300" />
-																	<p class="card-text text-1000 text-sans-serif">138 4 Ave SE<br />Suite 200<br /><a href="tel:+1-403-263-4414">(403) 263-4414</a></p>
+															<div class="col-md-4 mt-4 mt-md-0">
+																<div class="card">
+																	<div class="card-body">
+																		<a class="text-1000" href="https://ciwa-online.com"><h5 class="card-title">Calgary Immigrant Women's Association</h5></a>
+																		<hr class="text-300" />
+																		<p class="card-text text-1000 text-sans-serif">138 4 Ave SE<br />Suite 200<br /><a href="tel:+1-403-263-4414">(403) 263-4414</a></p>
+																	</div>
 																</div>
 															</div>
-														</div>
-														<div class="col-md-4 mt-4 mt-md-0">
-															<div class="card">
-																<div class="card-body">
-																	<a class="text-1000" href="https://canaf-calgary.ca" lang="fr-ca"><h5 class="card-title">Centre d’accueil pour les nouveaux arrivants francophones</h5></a>
-																	<hr class="text-300" />
-																	<p class="card-text text-1000 text-sans-serif">840 7 Ave SW<br />Suite 1601<br /><a href="tel:+1-403-532-6334">(403) 532-6334</a></p>
+															<div class="col-md-4 mt-4 mt-md-0">
+																<div class="card">
+																	<div class="card-body">
+																		<a class="text-1000" href="https://canaf-calgary.ca" lang="fr-ca"><h5 class="card-title">Centre d’accueil pour les nouveaux arrivants francophones</h5></a>
+																		<hr class="text-300" />
+																		<p class="card-text text-1000 text-sans-serif">840 7 Ave SW<br />Suite 1601<br /><a href="tel:+1-403-532-6334">(403) 532-6334</a></p>
+																	</div>
 																</div>
 															</div>
-														</div>
-														<div class="col-md-4 mt-4 mt-md-0">
-															<div class="card">
-																<div class="card-body">
-																	<a class="text-1000" href="https://www.centrefornewcomers.ca/"><h5 class="card-title">Centre for Newcomers</h5></a>
-																	<hr class="text-300" />
-																	<p class="card-text text-1000 text-sans-serif"></p>
+															<div class="col-md-4 mt-4 mt-md-0">
+																<div class="card">
+																	<div class="card-body">
+																		<a class="text-1000" href="https://www.centrefornewcomers.ca/"><h5 class="card-title">Centre for Newcomers</h5></a>
+																		<hr class="text-300" />
+																		<p class="card-text text-1000 text-sans-serif"></p>
+																	</div>
 																</div>
 															</div>
 														</div>
 													</div>
 													<div class="tab-content">
-														<div class="col-md-4 mt-4 mt-md-0">
-															<div class="card">
-																<div class="card-body">
-																	<a class="text-1000" href="https://clg.ab.ca"><h5 class="card-title">Calgary Legal Guidance</h5></a>
-																	<hr class="text-300" />
-																	<p class="card-text text-1000 text-sans-serif">840 - 7th Avenue SW<br />Suite 100<br /><a href="tel:+1-403-234-9266">(403) 234-9266</a></p>
+														<div class="row">
+															<div class="col-md-4 mt-4 mt-md-0">
+																<div class="card">
+																	<div class="card-body">
+																		<a class="text-1000" href="https://clg.ab.ca"><h5 class="card-title">Calgary Legal Guidance</h5></a>
+																		<hr class="text-300" />
+																		<p class="card-text text-1000 text-sans-serif">840 - 7th Avenue SW<br />Suite 100<br /><a href="tel:+1-403-234-9266">(403) 234-9266</a></p>
+																	</div>
 																</div>
 															</div>
-														</div>
-														<div class="col-md-4 mt-4 mt-md-0">
-															<div class="card">
-																<div class="card-body">
-																	<a class="text-1000" href="https://slacalgary.com"><h5 class="card-title">University of Calgary Student Legal Assistance</h5></a>
-																	<hr class="text-300" />
-																	<p class="card-text text-1000 text-sans-serif">3390 Murray Fraser Hall<br /><a href="tel:+1-403-220-6637">(403) 220-6637</a></p>
+															<div class="col-md-4 mt-4 mt-md-0">
+																<div class="card">
+																	<div class="card-body">
+																		<a class="text-1000" href="https://slacalgary.com"><h5 class="card-title">University of Calgary Student Legal Assistance</h5></a>
+																		<hr class="text-300" />
+																		<p class="card-text text-1000 text-sans-serif">3390 Murray Fraser Hall<br /><a href="tel:+1-403-220-6637">(403) 220-6637</a></p>
+																	</div>
 																</div>
 															</div>
 														</div>
@@ -282,21 +286,23 @@
 											<h5 class="d-inline-block fs-0">Edmonton</h5>
 										</div>
 										<div class="content">
-											<div class="col-md-4 mt-4 mt-md-0">
-												<div class="card">
-													<div class="card-body">
-														<a class="text-1000" href="https://eclc.ca"><h5 class="card-title">Edmonton Community Legal Centre</h5></a>
-														<hr class="text-300" />
-														<p class="card-text text-1000 text-sans-serif">10020 100 Street<br />Second floor<br /><a href="tel:+1-780-702-1725">(780) 702-1725</a></p>
+											<div class="row">
+												<div class="col-md-4 mt-4 mt-md-0">
+													<div class="card">
+														<div class="card-body">
+															<a class="text-1000" href="https://eclc.ca"><h5 class="card-title">Edmonton Community Legal Centre</h5></a>
+															<hr class="text-300" />
+															<p class="card-text text-1000 text-sans-serif">10020 100 Street<br />Second floor<br /><a href="tel:+1-780-702-1725">(780) 702-1725</a></p>
+														</div>
 													</div>
 												</div>
-											</div>
-											<div class="col-md-4 mt-4 mt-md-0">
-												<div class="card">
-													<div class="card-body">
-														<a class="text-1000" href="https://eisa-edmonton.org"><h5 class="card-title">Edmonton Immigrant Services Association</h5></a>
-														<hr class="text-300" />
-														<p class="card-text text-1000 text-sans-serif">10720 113 Street<br />Suite 201<br /><a href="tel:+1-780-474-8445">(780) 474-8445</a></p>
+												<div class="col-md-4 mt-4 mt-md-0">
+													<div class="card">
+														<div class="card-body">
+															<a class="text-1000" href="https://eisa-edmonton.org"><h5 class="card-title">Edmonton Immigrant Services Association</h5></a>
+															<hr class="text-300" />
+															<p class="card-text text-1000 text-sans-serif">10720 113 Street<br />Suite 201<br /><a href="tel:+1-780-474-8445">(780) 474-8445</a></p>
+														</div>
 													</div>
 												</div>
 											</div>
